apps/deployment/kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-tombola-api-deployment
  labels:
    app: open-tombola-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-tombola-api
  template:
    metadata:
      labels:
        app: open-tombola-api
    spec:
      containers:
        - name: open-tombola-api
          image: novaridr/open-tombola-api
          ports:
            - containerPort: 3333
