apps/deployment/kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-tombola-frontend-deployment
  labels:
    app: open-tombola-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-tombola-frontend
  template:
    metadata:
      labels:
        app: open-tombola-frontend
    spec:
      containers:
        - name: open-tombola-frontend
          image: novaridr/open-tombola-frontend
          ports:
            - containerPort: 80
