apps/deployment/kubernetes/frontend-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: open-tombola-load-balancer
  labels:
    app: open-tombola-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: open-tombola-frontend
